--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Interview coding of comparaOnline",
   "main": "index.js",
   "scripts": {
-    "test": "mocha spec/*.js"
+    "test": "mocha spec/*.test.js",
+    "after-30-days": "node spec/30days.js"
   },
   "repository": {
     "type": "git",
